Fixed contents going behind background gradient

--- a/src/common.scss
+++ b/src/common.scss
@@ -125,6 +125,7 @@ $box-vert-padding: 60px;
 		z-index: 2;
 	}
 	> * {
+		position: relative;
 		z-index: 3;
 	}
 }
